added python swagger and sql for trail location point, features and trail features tables
